# stock-analysis-app

./: .env.sample  .gitignore  Dockerfile  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml  run_mcp_server.bat  run_mcp_server.ps1
app/: .env.sample  config.py  main.py  server.py  test_httpx_ssl.py  test_openai.py
app/agents/: agents.yaml  builder.py  committee.py  config.py  financial.py  news_agent.py  research.py  risk.py  summary.py  valuation.py
app/database/: db_helper.py
app/frontend/: chroma_gui_server.py  index.css  index.html  index.js
app/mcp_server/: __init__.py  document_search.py
app/mcp_server/database/: chroma.sqlite3  hybrid_index_meta.json
app/rag/: sec_loader.py  sec_tool.py  vectorstore.py
app/tools/: corporate_documents_search.py  pdf_generator_tool.py
app/utils/: logging_config.py  pdf_generator.py
app/workflow/: graph.py  state.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  ChromaExplorer.css  ChromaExplorer.jsx
tests/: corporate_documents_search_test.py
